# mcp

./: .dockerignore  .gitignore  Dockerfile  database.py  docker-compose-proxy.yaml  docker-compose.yaml  flaskapp_init.py  flasky.py  hosts.json  manage_mastercontrol.py  pyproject.toml  readme.md  recent  reloader.sh  requirements-dev.txt  requirements-latest.txt  requirements.txt  runner.sh  sqlalchemy_bind_two_database.py  start-mcp-api-gun-icorn.sh  start.sh  supervisor-mastercontrol.conf  supervisor-mcp-api.conf  supervisor-tuya-listener.conf  supervisord.conf  supervisord.ini  uwsgi-develop.ini
archive/: Dockerfile-2018-12-13.sh  alt-start.sh  alt.Dockerfile  devices.json  entpt.sh  nmap-2019-01-21-0254.nmap  nmap-2019-01-21-0939.nmap  nmap-scan-2019-01-02-0123.grep  nmap-scan-2019-01-02-0201.nmap  nmap-scan-example-data.md  nmap-scan-ip-to-mac.md  start-2018-12-13-0831.sh  start-mcp-api-gun-icorn.sh  tuyadevice-device-status-schema.md  tuyadevice-multi-outlet-device-status-schema.md  tuyadevice-power-monitor-device-status-schema.md
conf.d/: devices.json
data/: cast_devices.json  results-2018-12-13-1442.json  scan-results.json  smart-outlet-scan-2018-12-13-1445.gnmap  smart-outlet-scan-2018-12-13-1445.nmap  smart-outlet-scan-2018-12-13-1445.xml
mastercontrol/: __init__.py  basemodel.py  config.py  config_default.py  flask_config.py  logutil.py  models.py  wsgi.py
mastercontrol/api/: __init__.py  views.py  views_outlets.py
mcp/: __init__.py  app.py  devices.py  logutil.py  models.py  tuya_controller.py  utils.py  wsgi.py
tests/: test_basics.py
(+25 files in other folders)
